# voicesummary

./: .dockerignore  .gitignore  AUDIO_PROCESSING_README.md  BOLNA_SCRIPT_README.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  OPEN_SOURCE_GUIDE.md  QUICKSTART.md  README.md  SECURITY.md  alembic.ini  cli.py  client_test.py  deploy.sh  docker-compose.yml  env.example  fetch_bolna_calls.py  fetch_bolna_calls_standalone.py  process.py  pyproject.toml  requirements.txt  shell.py  start.sh  start_backend.sh
alembic/versions/: 001_add_processed_data_column.py  c6352b5edd04_add_call_extracted_data_table.py
app/: config.py  database.py  main.py  models.py  schemas.py
app/api/: agent_comparison.py  calls.py
app/integrations/: bolna_agent_config_fetcher.py  fetch_bolna_calls_simple.py  manual_agent_manager.py
app/utils/: agent_analyzer.py  analyze_call_audio.py  audio_processor.py  call_data_pipeline.py  call_utils.py  comparison_orchestrator.py  conversation_simulator.py  critical_issues_analyzer.py  improved_voice_analyzer.py  latency_calculator.py  s3.py  scenario_based_user_simulator.py  scenario_validator.py  transcript_summarizer.py  turn_accuracy_validator.py  variable_replacer.py
config/: agent_prompts.yaml
examples/: README.md  agent_analysis_example.py  api_call_processing_example.py  simple_ingestion.py  transcript_summary_example.py
frontend/: README.md  next.config.js  package-lock.json  package.json  start.sh
frontend/app/: layout.tsx  page.tsx
frontend/app/agent-comparison/: page.tsx
frontend/app/llm-config/: page.tsx
frontend/components/: AgentAnalysis.tsx  AudioAnalysis.tsx  AudioPlayer.tsx  CallList.tsx  EnhancedTimeline.tsx  ExtractedData.tsx  MediaSection.tsx  TabbedLayout.tsx  TimelineBars.tsx  TranscriptAnalysis.tsx  TranscriptViewer.tsx
frontend/components/agent-comparison/: AgentInput.tsx  BestAgentCard.tsx  ComparisonProgress.tsx  ComparisonResults.tsx  CriticalIssues.tsx  (+4 more)
frontend/types/: agent-comparison.ts  call.ts  llm-config.ts
(+3 files in other folders)
