[project]
name = "voicesummary"
version = "0.1.0"
description = "Audio call management system with FastAPI, PostgreSQL, and S3"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",
    "boto3>=1.34.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "librosa>=0.11.0",
    "matplotlib>=3.9.4",
    "scipy>=1.13.1",
    "webrtcvad>=2.0.10",
    "setuptools>=80.9.0",
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Development dependencies are now in requirements.txt
# Install with: pip install -r requirements.txt

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
